--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,7 +12,7 @@
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_navigation_home_to_navigation_waterUserFragment"
-            app:destination="@id/navigation_waterUserFragment" />
+            app:destination="@id/navigation_waterUserInputFragment" />
     </fragment>
 
     <fragment
@@ -28,12 +28,12 @@
         tools:layout="@layout/fragment_notifications" />
 
     <fragment
-        android:id="@+id/navigation_waterUserFragment"
-        android:name="com.example.wateradmin.ui.inputPage.WaterUseFragment"
+        android:id="@+id/navigation_waterUserInputFragment"
+        android:name="com.example.wateradmin.ui.inputPage.WaterUseInputFragment"
         android:label="WaterUsedInput"
         tools:layout="@layout/fragment_usedwaterinput" >
         <action
-            android:id="@+id/action_navigation_waterUserFragment_to_navigation_home"
+            android:id="@+id/action_navigation_waterUserInputFragment_to_navigation_home"
             app:destination="@id/navigation_home" />
     </fragment>
 
@@ -43,8 +43,8 @@
         android:label="laundryInput"
         tools:layout="@layout/fragment_usedwaterinputlaundry" >
         <action
-            android:id="@+id/action_navigation_usedWaterInputFragment_to_navigation_waterUserFragment"
-            app:destination="@id/navigation_waterUserFragment" />
+            android:id="@+id/action_navigation_usedWaterInputFragment_to_navigation_waterUserInputFragment"
+            app:destination="@id/navigation_waterUserInputFragment" />
     </fragment>
 
 
