--- a/app/src/main/res/layout/fragment_usedwaterinputshower.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputshower.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context="ui.inputPage.UsedWaterInputShowerFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -49,6 +50,16 @@
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterShower_tv_title" />
+
+    <Button
+        android:id="@+id/usedWaterInputShower_bt_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
+        android:text="저장"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterShower_tv_usedMinute" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
