--- a/app/src/main/res/layout/fragment_usedwaterinputuserinput.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputuserinput.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_usedwaterInputUserInput"
+    tools:context="ui.inputPage.UsedWaterInputUserInputFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -23,11 +25,11 @@
         android:layout_height="45dp"
         android:text="리터(L) 기준 "
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/usedWaterInputUserInput_et_usedCount"
+        app:layout_constraintStart_toStartOf="@+id/usedWaterInputUserInput_et_usedWater"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_title" />
 
     <EditText
-        android:id="@+id/usedWaterInputUserInput_et_usedCount"
+        android:id="@+id/usedWaterInputUserInput_et_usedWater"
         android:layout_width="0dp"
         android:layout_height="43dp"
 
@@ -44,7 +46,17 @@
         android:layout_height="45dp"
         android:text="L"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/usedWaterInputUserInput_et_usedCount"
+        app:layout_constraintStart_toEndOf="@+id/usedWaterInputUserInput_et_usedWater"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_subtitle" />
+
+    <Button
+        android:id="@+id/usedWaterInputUserInput_bt_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="36dp"
+        android:text="저장"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_countTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
