--- a/app/src/main/res/layout/fragment_usedwaterinputwashcar.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputwashcar.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context="ui.inputPage.UsedWaterInputWashCarFragment"
+    android:id="@+id/fragment_usedWaterInputWashCar"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -52,5 +54,14 @@
         app:layout_constraintStart_toEndOf="@+id/usedWaterWashCar_et_usedCount"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterWashCar_tv_title" />
 
+    <Button
+        android:id="@+id/usedWaterInputUserInput_bt_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="36dp"
+        android:text="저장"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterWashCar_tv_CountNumber" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
