--- a/app/src/main/res/layout/fragment_usedwaterinputwashdish.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputwashdish.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context="ui.inputPage.UsedWaterInputWashdishFragment"
+    android:id="@+id/fragment_usedWaterInputWaterWashdish"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -37,7 +39,7 @@
             android:id="@+id/usedWaterWashDish_radioBt_handWashDish"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="손 설거지" />
+            android:text="손 설거지(4인)" />
 
         <RadioButton
             android:id="@+id/usedWaterWashDish_radioBt_WashMachine"
@@ -46,6 +48,17 @@
             android:text="식기세척기 사용(5~12인용)" />
 
     </RadioGroup>
+
+    <Button
+        android:id="@+id/usedWaterInputUserInput_bt_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="44dp"
+        android:text="저장"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.805"
+        app:layout_constraintStart_toEndOf="@+id/usedWaterWashDish_radigG_modeChoice"
+        tools:layout_editor_absoluteY="252dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
