--- a/app/src/main/res/layout/fragment_usedwaterinputuserinput.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputuserinput.xml
@@ -12,17 +12,39 @@
 
         android:layout_width="205dp"
         android:layout_height="51dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="48dp"
         android:text="사용자 직접 입력"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/usedWaterInputUserInput_tv_subtitle"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Spinner
+        android:id="@+id/usedWaterInputUserInput_sp_literChoice"
+        android:layout_width="119dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/usedWaterInputUserInput_et_usedWater"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_subtitle" />
+
+    <Button
+        android:id="@+id/usedWaterInputUserInput_bt_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="48dp"
+        android:text="저장"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_sp_literChoice" />
+
     <TextView
         android:id="@+id/usedWaterInputUserInput_tv_subtitle"
         android:layout_width="146dp"
         android:layout_height="45dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
         android:text="리터(L) 기준 "
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/usedWaterInputUserInput_et_usedWater"
@@ -33,30 +55,13 @@
         android:layout_width="0dp"
         android:layout_height="43dp"
 
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="40dp"
         android:ems="10"
         android:inputType="number"
         android:text="1"
+        app:layout_constraintBottom_toTopOf="@+id/usedWaterInputUserInput_bt_save"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_subtitle" />
-
-    <TextView
-        android:id="@+id/usedWaterInputUserInput_tv_countTitle"
-        android:layout_width="146dp"
-        android:layout_height="45dp"
-        android:text="L"
-        android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/usedWaterInputUserInput_et_usedWater"
-        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_subtitle" />
-
-    <Button
-        android:id="@+id/usedWaterInputUserInput_bt_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="36dp"
-        android:text="저장"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_countTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_subtitle"
+        app:layout_constraintVertical_bias="0.105" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
