--- a/app/src/main/res/layout/fragment_usedwaterinputwashdish.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputwashdish.xml
@@ -11,18 +11,17 @@
         android:id="@+id/usedWaterWashDish_tv_title"
         android:layout_width="128dp"
         android:layout_height="40dp"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="28dp"
         android:text="설거지 유형"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/usedWaterWashDish_radigG_modeChoice"
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/usedWaterWashDish_radigG_modeChoice"
-        android:layout_width="211dp"
-        android:layout_height="220dp"
+        android:layout_width="207dp"
+        android:layout_height="150dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,12 +52,13 @@
         android:id="@+id/usedWaterInputUserInput_bt_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="44dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="68dp"
         android:text="저장"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.805"
-        app:layout_constraintStart_toEndOf="@+id/usedWaterWashDish_radigG_modeChoice"
-        tools:layout_editor_absoluteY="252dp" />
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterWashDish_radigG_modeChoice"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
