--- a/app/src/main/res/layout/fragment_recordlist.xml
+++ b/app/src/main/res/layout/fragment_recordlist.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.042" />
 
     <ListView
-        android:id="@+id/recordList_lv_waterRecord"
+        android:id="@android:id/list"
         android:layout_width="340dp"
         android:layout_height="605dp"
         android:layout_marginTop="24dp"
