--- a/app/src/main/res/layout/fragment_recordlist.xml
+++ b/app/src/main/res/layout/fragment_recordlist.xml
@@ -21,17 +21,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.042" />
 
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="340dp"
-        android:layout_height="605dp"
-        android:layout_marginTop="24dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recordList_rv_records"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recordList_tv_waterRecord"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintTop_toBottomOf="@+id/recordList_tv_waterRecord" />
 
 
     <!--
