--- a/app/src/main/res/layout/fragment_recordlistitem.xml
+++ b/app/src/main/res/layout/fragment_recordlistitem.xml
@@ -3,34 +3,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
-    <LinearLayout
-        android:layout_width="348dp"
-        android:layout_height="83dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="34dp"
-        tools:layout_editor_absoluteY="42dp">
+    <TextView
+        android:id="@+id/recordListItem_tv_usedWater"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:text="물 사용량 00원"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/recordListItem_tv_usedWaterTax"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/recordListItem_tv_date"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/recordListItem_tv_date"
-            android:layout_width="95dp"
-            android:layout_height="match_parent"
-            android:text="00월 00일" />
+    <TextView
+        android:id="@+id/recordListItem_tv_usedWaterTax"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:text="물 수도세 00원"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/recordListItem_tv_usedWater"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/recordListItem_tv_usedWater"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="물 사용량 00원" />
+    <TextView
+        android:id="@+id/recordListItem_tv_date"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:text="00월 00일"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/recordListItem_tv_usedWater"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/recordListItem_tv_usedWaterTax"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="물 수도세 00원" />
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
